--- a/src/app/pages/calendar/calendar.component.html
+++ b/src/app/pages/calendar/calendar.component.html
@@ -10,6 +10,12 @@
     @for (item of calendarData; track item){
       <div class="calendar-body" [ngClass]="[item.isCurrentMonth?'current-month':'', item.isCurrentDay? 'current-day':'']">
       <span>{{item.day}}</span>
+
+      <section>
+
+         
+      </section>
+
     </div>
     }
 
