--- a/src/app/pages/calendar/calendar.component.html
+++ b/src/app/pages/calendar/calendar.component.html
@@ -7,18 +7,47 @@
       <span class="calendar-header">{{header}}</span>
     }
 
-    @for (item of calendarData; track item){
-      <div class="calendar-body" [ngClass]="[item.isCurrentMonth?'current-month':'', item.isCurrentDay? 'current-day':'']">
-      <span>{{item.day}}</span>
-
-      <section>
-
-         
-      </section>
-
-    </div>
-    }
-
-  </article>
-
+    @for (item of calendarData; let calendarIndex = $index; track item) {
+      <div class="calendar-body" [ngClass]="[ item.isCurrentMonth ? 'current-month' : '',  item.isCurrentDay ? 'current-day' : '']">
+          <span>{{item.data}}</span>
+          <section>
+            
+          </section>
+      </div>
+  }
+</article>
 </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
